# EvoEnv

./: .gitignore  agent.py  bench_CL_experiments.py  environment.py  evoenv.py  human_interface.py  pyproject.toml  readme.md  tools_parser.py
agents/: agent.py  content_editor.py  hybrid_memory.py  notes_as_reflection_agent.py  reflect_agent.py
agents/prompts/: failed_tool_calls.txt  history_condense-1.txt  history_condense.txt  reflection.txt  todo_list.txt
docs/: TraineeBench.md
environments/: __init__.py
environments/common/: __init__.py  base_adapter.py  base_controller.py  base_evaluator.py  controller_config_example.json  registry.py  test_event_controller.py  tool_interface.py  types.py
environments/traineebench/: __init__.py  adapter.py  customized_bench_configs.py  gen_bench_from_config.py  task_hub.py  traineebench_cl_config.json  traineebench_config.json
environments/traineebench/schemas/: __init__.py  common_config.py  registry.py
environments/traineebench/schemas/templates/: manuals_for_intern.md
examples/: simple_benchmark_run.py
templates/: _tools_calendar.html  _tools_chat.html  _tools_cloud.html  _tools_command.html  _tools_file_view_edit.html  _tools_website_monitor.html  index.html  style.css
toolbox/: calculator_tool.py  calendar_tool.py  cloud_disk_tool.py  data_url_tool.py  done_tool.py  message_tool.py  sandbox_tool.py  website_monitor.py
virtual_server/: Dockerfile  __init__.py  base_server.py  chat_server.py  cloud_disk.py  docker_sandbox.py  meeting_calendar.py  registry.py
(+105 files in other folders)
